--- a/Dupe Finder UI/MainWindow.xaml
+++ b/Dupe Finder UI/MainWindow.xaml
@@ -7,6 +7,9 @@
         xmlns:vm="clr-namespace:Dupe_Finder_UI.ViewModel"
         mc:Ignorable="d"
         Title="Dupe Finder" Height="450" Width="800">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
@@ -21,11 +24,22 @@
                           Click="miStartChecksumComparison_Click"/>
             </MenuItem>
         </Menu>
+        <DockPanel LastChildFill="True" DockPanel.Dock="Top">
+            <Button Name="btnOpen" DockPanel.Dock="Right" Click="btnOpen_Click">
+                Open...
+            </Button>
+            <TextBlock Name="tbPath"
+                       VerticalAlignment="Center"
+                       Margin="2,0"
+                       IsEnabled="False"
+                       Text="{Binding FolderPath, Mode=OneWay}"/>
+        </DockPanel>
         <StatusBar DockPanel.Dock="Bottom">
-            <Label Name="lblFolder" Content="{Binding FolderPath}"/>
-            <Label Name="lblStatus" Content="{Binding Status}"/>
-            <Label Name="lblDuplicateCount" Content="{Binding DuplicateItemCountText}"/>
-            <Label Name="lblWastedSpace" Content="{Binding WastedSpaceText}"/>
+            <StatusBarItem Content="{Binding Status}"/>
+            <StatusBarItem Content="{Binding DuplicateItemCountText}"
+                           Visibility="{Binding DuplicateItemCountIsValid, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <StatusBarItem Content="{Binding WastedSpaceText}"
+                           Visibility="{Binding WastedSpaceIsValid, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         </StatusBar>
         <TreeView Name="tvDupesList" ItemsSource="{Binding Children}">
             <!-- Styling for general tree members. -->
