--- a/Dupe Finder UI/MainWindow.xaml
+++ b/Dupe Finder UI/MainWindow.xaml
@@ -13,23 +13,21 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
-                <MenuItem Name="miOpenFolder" Header="_Open Folder..." Click="miOpenFolder_Click"/>
-                <MenuItem Name="miOpen" Header="O_pen Saved Session..."/>
-                <MenuItem Name="miSaveAs" Header="_Save Session As..."/>
+                <MenuItem Header="_Open Folder..." Click="OpenFolder"/>
+                <MenuItem Header="O_pen Saved Session..."/>
+                <MenuItem Header="_Save Session As..."/>
             </MenuItem>
             <MenuItem Header="_Comparison">
-                <MenuItem Name="miStartChecksumComparison"
-                          Header="_Start Checksum Comparison"
+                <MenuItem Header="_Start Checksum Comparison"
                           IsEnabled="{Binding FullComparisonEnabled}"
-                          Click="miStartChecksumComparison_Click"/>
+                          Click="StartChecksumComparison"/>
             </MenuItem>
         </Menu>
         <DockPanel LastChildFill="True" DockPanel.Dock="Top">
-            <Button Name="btnOpen" DockPanel.Dock="Right" Click="btnOpen_Click">
-                Open...
+            <Button Click="OpenFolder" DockPanel.Dock="Right">
+                <ContentControl Content="{StaticResource OpenFolder}" ToolTip="Open Folder..."/>
             </Button>
-            <TextBlock Name="tbPath"
-                       VerticalAlignment="Center"
+            <TextBlock VerticalAlignment="Center"
                        Margin="2,0"
                        IsEnabled="False"
                        Text="{Binding FolderPath, Mode=OneWay}"/>
@@ -41,7 +39,7 @@
             <StatusBarItem Content="{Binding WastedSpaceText}"
                            Visibility="{Binding WastedSpaceIsValid, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         </StatusBar>
-        <TreeView Name="tvDupesList" ItemsSource="{Binding Children}">
+        <TreeView ItemsSource="{Binding Children}">
             <!-- Styling for general tree members. -->
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
@@ -59,7 +57,19 @@
                 <!-- For `DuplicateFileVM` items. -->
                 <DataTemplate
                     DataType="{x:Type vm:DuplicateFileVM}">
-                    <TextBlock Text="{Binding Path}"/>
+                    <TextBlock Text="{Binding Path}">
+                        <TextBlock.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Command="Copy">
+                                    <MenuItem.CommandBindings>
+                                        <CommandBinding Command="Copy"
+                                                        CanExecute="TextBlockCopy_CanExecute"
+                                                        Executed="TextBlockCopy_Executed"/>
+                                    </MenuItem.CommandBindings>
+                                </MenuItem>
+                            </ContextMenu>
+                        </TextBlock.ContextMenu>
+                    </TextBlock>
                 </DataTemplate>
             </TreeView.Resources>
             <!--<TreeViewItem Header="Nothing opened yet."/>-->
