Escape key used in the path textbox now resets to most recent good path.

--- a/Dupe Finder UI/MainWindow.xaml
+++ b/Dupe Finder UI/MainWindow.xaml
@@ -35,6 +35,7 @@
                         ValidatesOnExceptions=True, NotifyOnValidationError=True}">
             <TextBox.InputBindings>
                 <KeyBinding Key="Return" Command="{Binding OpenFolderPath}"/>
+                <KeyBinding Key="Esc" Command="{Binding ResetFolderPath}"/>
             </TextBox.InputBindings>
         </TextBox>
         <StatusBar DockPanel.Dock="Bottom">
