Move copy path command from code-behind to view model.

--- a/Dupe Finder UI/MainWindow.xaml
+++ b/Dupe Finder UI/MainWindow.xaml
@@ -70,13 +70,7 @@
                     <TextBlock Text="{Binding Path}">
                         <TextBlock.ContextMenu>
                             <ContextMenu>
-                                <MenuItem Command="Copy">
-                                    <MenuItem.CommandBindings>
-                                        <CommandBinding Command="Copy"
-                                                        CanExecute="TextBlockCopy_CanExecute"
-                                                        Executed="TextBlockCopy_Executed"/>
-                                    </MenuItem.CommandBindings>
-                                </MenuItem>
+                                <MenuItem Header="Copy Path" Command="{Binding CopyPath}"/>
                             </ContextMenu>
                         </TextBlock.ContextMenu>
                     </TextBlock>
