--- a/Dupe Finder UI/Resources/Icons.xaml
+++ b/Dupe Finder UI/Resources/Icons.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Dupe_Finder_UI.Resources">
     <!-- From the Visual Studio Image Library (2017) -->
-    <Viewbox x:Key="OpenFolder" Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+    <Viewbox x:Key="OpenFolder" x:Shared="false" Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
         <Rectangle Width="16" Height="16">
             <Rectangle.Fill>
                 <DrawingBrush>
@@ -21,7 +21,7 @@
         </Rectangle>
     </Viewbox>
 
-    <Viewbox x:Key="AddFolder" Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+    <Viewbox x:Key="AddFolder" x:Shared="false" Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
         <Rectangle Width="16" Height="16">
             <Rectangle.Fill>
                 <DrawingBrush>
@@ -33,6 +33,24 @@
                                 <GeometryDrawing Brush="#FFDCB67A" Geometry="F1M15,6.5L15,13.5C15,13.776,14.776,14,14.5,14L3.5,14C3.224,14,3,13.776,3,13.5L3,8 6,8 6,6 8,6 9.5,6 9,5 8,5 8,4 10,4 11,6 14.5,6C14.776,6,15,6.224,15,6.5" />
                                 <GeometryDrawing Brush="#FF388A34" Geometry="F1M7,5L5,5 5,7 3,7 3,5 1,5 1,3 3,3 3,1 5,1 5,3 7,3z" />
                                 <GeometryDrawing Brush="#FFEFEFF0" Geometry="F1M8.0001,5.0002L8.0001,6.0002 9.5001,6.0002 9.0001,5.0002z" />
+                            </DrawingGroup.Children>
+                        </DrawingGroup>
+                    </DrawingBrush.Drawing>
+                </DrawingBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+    </Viewbox>
+
+    <Viewbox x:Key="Checkmark" x:Shared="false" Width="16" Height="16" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+        <Rectangle Width="16" Height="16">
+            <Rectangle.Fill>
+                <DrawingBrush>
+                    <DrawingBrush.Drawing>
+                        <DrawingGroup>
+                            <DrawingGroup.Children>
+                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                <GeometryDrawing Brush="#FFF6F6F6" Geometry="F1M6.0003,9.1717L2.7073,5.8787 0.000300000000000189,8.5857 0.000300000000000189,8.8277 6.0003,14.8277 16.0003,4.8287 16.0003,4.5857 13.2933,1.8787z" />
+                                <GeometryDrawing Brush="#FF388A34" Geometry="F1M14.707,4.707L6,13.414 1.293,8.707 2.707,7.293 6,10.586 13.293,3.293z" />
                             </DrawingGroup.Children>
                         </DrawingGroup>
                     </DrawingBrush.Drawing>
